cargo-features = ["edition2021"]

[workspace]

members = [
    "common",
    "test-utils",
    "integration-tests",
    "contracts/home",
    "contracts/replica",
    "contracts/updater-manager",
    "contracts/nomad-base",
    "contracts/ownable",
    "contracts/queue",
    "contracts/merkle",
    "contracts/test/test-recipient",
    "contracts/test/test-replica",
]
