cargo-features = ["edition2021"]

[workspace]

members = [
    "common",
    "test-utils",
    "integration-tests",
    "contracts/home",
    "contracts/replica",
    "contracts/connection-manager",
    "contracts/updater-manager",
    "contracts/nomad-base",
    "contracts/ownable",
    "contracts/queue",
    "contracts/merkle",
    "contracts/test/test-recipient",
    "contracts/test/bad-recipient",
    "contracts/test/test-replica",
]
