[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cw-multi-test = {git = "https://github.com/CosmWasm/cw-plus.git", tag = "v0.11.1"}
tokio = { version = "1.0.1", features = ["rt", "macros"] }

ethers-core = "0.6.2"
ethers-signers = "0.6.2"

test-utils = { path = "../test-utils" }
home = { path = "../contracts/home" }
updater-manager = { path = "../contracts/updater-manager" }
common = { path = "../common" }