[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
ethers-signers = "0.6.2"
ethers-core = "0.6.2"
sha3 = "0.10.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.61", default-features = false }

merkle = { path = "../contracts/merkle" }